se aplico code cleanup